fixed double period in the login form view, fixed bracket syntax issue in the customer css, improved vertical spacing in the report object.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -572,13 +572,11 @@ table.table-mail tr td {
   left: 1px;
 }
 
-.email_threads_list_view_tbody tr
-{
+.email_threads_list_view_tbody tr {
   cursor: pointer;
 }
 
-.settings-view, .analytics-view, .report-view
-{
+.settings-view, .analytics-view, .report-view {
   height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
